# neural-symbolic-reasoner

./: ARCHITECTURE.md  README.md  commit_message.txt  commit_msg.txt  fast_fix_log.txt  final_push.txt  index.html  pyproject.toml  sedyOfmbU  sedzkpITo  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: RULES.md
docs/executed/: 01_neurosymbolic_rules_plus_linear_model.html
examples/: basic_inference.py
notebooks/: 01_neurosymbolic_rules_plus_linear_model.ipynb  02_advanced_neurosymbolic_reasoning.ipynb
src/: __init__.py  logic_layer.py  observers.py  reasoner.py  rule_engine.py
tests/: test_rule_engine.py
