[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-symbolic-reasoner"
version = "0.2.0"
description = "Hybrid neural-symbolic reasoning toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
